updates package.json and bluebird to 3.x.x

--- a/package.json
+++ b/package.json
@@ -23,19 +23,19 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/calipersjs/calipers-gif/issues"
+    "url": "https://github.com/calipersjs/calipers/issues"
   },
   "homepage": "https://github.com/calipersjs/calipers-gif",
   "devDependencies": {
-    "chai": "^2.2.0",
-    "coveralls": "^2.11.2",
-    "eslint": "^1.9.0",
-    "eslint-config-lob": "^1.0.1",
-    "istanbul": "^0.3.13",
-    "mocha": "^2.1.0",
-    "mocha-lcov-reporter": "0.0.2"
+    "chai": "2.x.x",
+    "coveralls": "2.x.x",
+    "eslint": "1.x.x",
+    "eslint-config-lob": "1.x.x",
+    "istanbul": "0.x.x",
+    "mocha": "2.x.x",
+    "mocha-lcov-reporter": "0.x.x"
   },
   "dependencies": {
-    "bluebird": "^2.9.13"
+    "bluebird": "3.x.x"
   }
 }
