--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "calipers-gif",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "description": "GIF plugin for calipers.",
   "main": "lib/index.js",
   "scripts": {
@@ -37,5 +37,8 @@
   },
   "dependencies": {
     "bluebird": "3.x.x"
+  },
+  "peerDependencies": {
+    "calipers": "2.x.x"
   }
 }
